--- a/handy.html
+++ b/handy.html
@@ -5,12 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="handy.css">
 </head>
 <body>
+<img src="img/logo.jpg">
+<img src="img/header.jpg">
 <img src="img/banner-1.jpg">
 <img src="img/banner-2.jpg">
 <img src="img/banner-3.jpg">
-<img src="img/logo.jpg">
-<img src="img/header.jpg">
 <img src="img/footer.jpg">
-<footer>Lucas Tigelaar</footer>
+<footer>© Lucas Tigelaar, 2021</footer>
 </body>
 </html>
