--- a/handy.html
+++ b/handy.html
@@ -11,6 +11,8 @@
 <img src="img/banner-2.jpg">
 <img src="img/banner-3.jpg">
 <img src="img/footer.jpg">
+<article></article>
+<nav></nav>
 <footer>© Lucas Tigelaar, 2021</footer>
 </body>
 </html>
