redelijk veel gedaan

--- a/handy.html
+++ b/handy.html
@@ -2,17 +2,40 @@
 <html>
 <head>
 	<title>Handy</title>
+	<script src="https://kit.fontawesome.com/15555c3350.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="handy.css">
 </head>
 <body>
-<img src="img/logo.jpg">
-<img src="img/header.jpg">
-<img src="img/banner-1.jpg">
-<img src="img/banner-2.jpg">
-<img src="img/banner-3.jpg">
-<img src="img/footer.jpg">
-<article></article>
-<nav></nav>
-<footer>© Lucas Tigelaar, 2021</footer>
+	<div class="entirePage">
+		<img src="img/logo.jpg">
+		<nav>
+			<a href="">HOME</a>
+			<a href="">OVER ONS</a>
+			<a href="">PORTFOLIO</a>
+			<a href="">NIEUWS</a>
+			<a href="">CONTACT</a>
+		</nav>
+		<img src="img/header.jpg">
+		<img src="img/banner-1.jpg">
+		<img src="img/banner-2.jpg">
+		<img src="img/banner-3.jpg">
+		<img src="img/footer.jpg">
+		<div class="deals">
+			<i class="far fa-handshake"></i>
+			<h2>DEALS</h2>
+			<p>BEKIJK ONZE DEALS</p>
+		</div>
+		<div class="diensten">
+			<i class="fas fa-toolbox"></i>
+			<h2>DIENSTEN</h2>
+			<p>BEKIJK ONZE DIENSTEN</p>
+		</div>
+		<div class="contact">
+			<i class="far fa-envelope"></i>
+			<h2>CONTACT</h2>
+			<p>STUUR EEN BERICHT</p>
+		</div>
+		<footer>© Lucas Tigelaar, 2021</footer>
+	</div>
 </body>
 </html>
