--- a/handy.html
+++ b/handy.html
@@ -19,6 +19,9 @@
 		<img src="img/banner-1.jpg">
 		<img src="img/banner-2.jpg">
 		<img src="img/banner-3.jpg">
+		<div class="gelebalk">
+			<h2>Wij bouwen oplossingen</h2>
+		</div>
 		<img src="img/footer.jpg">
 		<div class="deals">
 			<i class="far fa-handshake"></i>
@@ -35,7 +38,7 @@
 			<h2>CONTACT</h2>
 			<p>STUUR EEN BERICHT</p>
 		</div>
-		<footer>© Lucas Tigelaar, 2021</footer>
+		<footer>&copy Lucas Tigelaar, 2021</footer>
 	</div>
 </body>
 </html>
