--- a/handy.html
+++ b/handy.html
@@ -3,8 +3,50 @@
 <head>
 	<title>Handy</title>
 	<link rel="stylesheet" type="text/css" href="handy.css">
+	<script src="https://kit.fontawesome.com/15555c3350.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+<div class="container">
+	<img class="logo" src="img/logo.jpg">
+	<div class="navbar">
+		<a>HOME</a>
+		<a>OVER ONS</a>
+		<a>PORTFOLIO</a>
+		<a>NIEUWS</a>
+		<a>CONTACT</a>
+	</div>
+	<img class="header" src="img/header.jpg">
+	<div class="banner">
+		<img class="banners" src="img/banner-1.jpg">
+		<img class="banners" src="img/banner-2.jpg">
+		<img class="banners" src="img/banner-3.jpg">
+	</div>
+	<div class="oplossing">
+		<p class="hugeLetters">Wij bouwen oplossingen</p>
+		<p class="smallLetters">Die echt werken...</p>
+		<button>MEER WETEN?</button>
+	</div>
+	<img class="footer" src="img/footer.jpg">
+	<div class="ddc">
+		<div class="box">
+			<i class="far fa-handshake"></i>
+			<p class="bigLetters">DEALS</p>
+			<p class="smallLetters">BEKIJK ONZE DEALS</p>
+		</div>
+		<div class="box">
+			<i class="fas fa-briefcase"></i>
+			<p class="bigLetters">DIENSTEN</p>
+			<p class="smallLetters">BEKIJK ONZE DIENSTEN</p>
+		</div>
+		<div class="box">
+			<i class="far fa-envelope"></i>
+			<p class="bigLetters">CONTACT</p>
+			<p class="smallLetters">STUUR EEN BERICHT</p>
+		</div>
+	</div>
+	<footer>© Lucas Tigelaar, 2018</footer>
+</div>
 
 </body>
 </html>
