--- a/handy.html
+++ b/handy.html
@@ -8,7 +8,9 @@
 <body>
 
 <div class="container">
-	<img class="logo" src="img/logo.jpg">
+
+		<img class="logo" src="img/logo.jpg">
+
 	<div class="navbar">
 		<a>HOME</a>
 		<a>OVER ONS</a>
@@ -16,36 +18,42 @@
 		<a>NIEUWS</a>
 		<a>CONTACT</a>
 	</div>
-	<img class="header" src="img/header.jpg">
+
+		<img class="header" src="img/header.jpg">
+
 	<div class="banner">
 		<img class="banners" src="img/banner-1.jpg">
 		<img class="banners" src="img/banner-2.jpg">
 		<img class="banners" src="img/banner-3.jpg">
 	</div>
+
 	<div class="oplossing">
 		<p class="hugeLetters">Wij bouwen oplossingen</p>
 		<p class="smallLetters">Die echt werken...</p>
 		<button>MEER WETEN?</button>
 	</div>
-	<img class="footer" src="img/footer.jpg">
-	<div class="ddc">
-		<div class="box">
-			<i class="far fa-handshake"></i>
+
+		<img class="footer" src="img/footer.jpg">
+
+	<div class="box">
+		<div class="deals">
+			<i class="far fa-handshake" style="font-size: 40px"></i>
 			<p class="bigLetters">DEALS</p>
 			<p class="smallLetters">BEKIJK ONZE DEALS</p>
 		</div>
-		<div class="box">
-			<i class="fas fa-briefcase"></i>
+		<div class="diensten">
+			<i class="fas fa-briefcase" style="font-size: 40px"></i>
 			<p class="bigLetters">DIENSTEN</p>
 			<p class="smallLetters">BEKIJK ONZE DIENSTEN</p>
 		</div>
-		<div class="box">
-			<i class="far fa-envelope"></i>
+		<div class="contact">
+			<i class="far fa-envelope" style="font-size: 40px"></i>
 			<p class="bigLetters">CONTACT</p>
 			<p class="smallLetters">STUUR EEN BERICHT</p>
 		</div>
 	</div>
-	<footer>© Lucas Tigelaar, 2018</footer>
+
+	<footer>&copy Lucas Tigelaar, 2018</footer>
 </div>
 
 </body>
