brede elements goed gezet

--- a/handy.html
+++ b/handy.html
@@ -18,22 +18,28 @@
 		<a>NIEUWS</a>
 		<a>CONTACT</a>
 	</div>
+</div>
 
 		<img class="header" src="img/header.jpg">
 
+<div class="container">
 	<div class="banner">
 		<img class="banners" src="img/banner-1.jpg">
 		<img class="banners" src="img/banner-2.jpg">
 		<img class="banners" src="img/banner-3.jpg">
 	</div>
+</div>
 
 	<div class="oplossing">
-		<p class="hugeLetters">Wij bouwen oplossingen</p>
-		<p class="smallLetters">Die echt werken...</p>
-		<button>MEER WETEN?</button>
+		<div class="container">
+			<button>MEER WETEN?</button>
+			<p class="hugeLetters">Wij bouwen oplossingen</p>
+			<p class="smallLetters">Die echt werken...</p>
+		</div>
 	</div>
 
 		<img class="footer" src="img/footer.jpg">
+<div class="container">
 
 	<div class="box">
 		<div class="deals">
@@ -53,8 +59,9 @@
 		</div>
 	</div>
 
-	<footer>&copy Lucas Tigelaar, 2018</footer>
 </div>
+
+<footer><div class="container">&copy Lucas Tigelaar, 2018</div></footer>
 
 </body>
 </html>
